# JARVIS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_opencv.bat  quickstart.md
include/: lua.hpp  lua_object.hpp  unicode.h
main/: CMakeLists.txt  application.cpp  application.h  application_windows.cpp  application_windows.h  lua_async_task.cpp  lua_async_task.h  lua_module.cpp  lua_module.h  lua_plugin.h  lua_serialize.c  lua_system.cpp  lua_webclient.c  main.cpp  unicode.cpp
opencv/: CMakeLists.txt  lua_object.h  lua_opencv.cpp  lua_opencv.h
script/: adb.lua  config.lua  demo.lua  emulator.lua  game.lua  game_state.lua  game_state_cfg.lua  main.lua  mobile_game.lua  notify.lua  opencv.lua  preload.lua  tree.lua  warcraft.lua  webclient.lua
script/cmd/: a.lua  m.lua  r.lua  t.lua
script/coroutine/: async.lua  controller.lua  reload.lua  webclient.lua
script/task/: check_game_state.lua
service/ocr/: App.config  HttpServer.cs  Ocr.cs  Program.cs  ocr.csproj  ocr.sln  packages.config
service/ocr/Properties/: Resources.Designer.cs
system/: lua_system.c  lua_system.h
windows/: CMakeLists.txt  lua_proccess.c  lua_windows.c  lua_windows.h
